--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>SQL 自动化编写助手</title>
+    <!-- PWA / Add to Home Screen Support -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="SQL 助手">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/FzJmtXTd/unnamed.png">
+    
     <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20448%20512'%3E%3Cpath%20fill='%234a90e2'
         d='M448%2080v48c0%2044.2-100.3%2080-224%2080S0%20172.2%200%20128V80C0%2035.8%20100.3%200%20224%200S448%2035.8%20448%2080zM393.2%20214.7c20.8-7.4%2039.9-16.9%2054.8-28.6V288c0%2044.2-100.3%2080-224%2080S0%20332.2%200%20288V186.1c14.9%2011.8%2034%2021.2%2054.8%2028.6C99.7%20230.7%20159.5%20240%20224%20240s124.3-9.3%20169.2-25.3zM448%20368v48c0%2044.2-100.3%2080-224%2080S0%20460.2%200%20416V368c0-17.5%2013-32.9%2031.5-41.2C86.2%20344.3%20152.6%20352%20224%20352s137.8-7.7%20192.5-25.2c18.5%208.3%2031.5%2023.7%2031.5%2041.2z'/%3E%3C/svg%3E">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -2091,7 +2097,7 @@
             const isPanelOpen = isSettingsOpen || isHistoryOpen || isTutorialOpen || isConsoleOpen;
 
             return (
-                React.createElement('div', { className: `h-screen flex flex-col relative ${isMounted ? 'app-mounted' : ''}` },
+                React.createElement('div', { className: `h-[100dvh] flex flex-col relative ${isMounted ? 'app-mounted' : ''}` },
                     toastMessage && React.createElement(Toast, { message: toastMessage }),
                     React.createElement(Header, { 
                         onHistoryClick: () => handleToggleHistory(), 
