--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
             --gradient-from: #4a90e2;
             --gradient-to: #64b5f6;
         }
+        .dark ::-webkit-scrollbar {
+            width: 8px;
+            height: 8px;
+        }
+
+        .dark ::-webkit-scrollbar-track {
+            background: var(--card-bg);
+        }
+
+        .dark ::-webkit-scrollbar-thumb {
+            background: #4a5568;
+            border-radius: 4px;
+        }
+
+        .dark ::-webkit-scrollbar-thumb:hover {
+            background: #5a6578;
+        }
+
+        /* Firefox 滚动条样式 */
+        .dark * {
+            scrollbar-width: thin;
+            scrollbar-color: #4a5568 var(--card-bg);
+        }
+        
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background: var(--bg-color);
