--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             top: 0;
             left: 0;
             right: 0;
-            height: 400px;
-            background: linear-gradient(135deg, var(--accent-light) 0%, transparent 50%);
-            opacity: 0.3;
+            bottom: 0;
+            background: linear-gradient(to top, var(--accent-color), transparent 70%);
+            opacity: 0.08;
             pointer-events: none;
             z-index: 0;
         }
