--- a/index.html
+++ b/index.html
@@ -261,6 +261,77 @@
             line-height: 1.6;
             font-size: 14px;
         }
+
+        /* Enhanced list styles */
+        .markdown-content ul li {
+            position: relative;
+            padding-left: 1.5rem;
+            margin-top: 0.5rem;
+        }
+        .markdown-content ul li::before {
+            content: '•';
+            position: absolute;
+            left: 0;
+            top: 0;
+            color: var(--text-primary);
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+        .markdown-content ol li {
+            position: relative;
+            padding-left: 1.5rem;
+            margin-top: 0.5rem;
+        }
+        .markdown-content ol {
+            counter-reset: list-counter;
+        }
+        .markdown-content ol li {
+            counter-increment: list-counter;
+        }
+        .markdown-content ol li::before {
+            content: counter(list-counter) '.';
+            position: absolute;
+            left: 0;
+            top: 0;
+            color: var(--text-primary);
+            font-weight: 600;
+            font-size: 0.9em;
+        }
+
+        /* Enhanced headings */
+        .markdown-content h1, .markdown-content h2, .markdown-content h3, 
+        .markdown-content h4, .markdown-content h5, .markdown-content h6 {
+            color: var(--text-primary);
+            font-weight: 600;
+            margin-top: 1.5rem;
+            margin-bottom: 0.75rem;
+            line-height: 1.3;
+        }
+        .markdown-content h1 { font-size: 1.5rem; border-bottom: 2px solid var(--accent-color); padding-bottom: 0.5rem; }
+        .markdown-content h2 { font-size: 1.3rem; border-bottom: 1px solid var(--border-color); padding-bottom: 0.25rem; }
+        .markdown-content h3 { font-size: 1.1rem; color: var(--accent-color); }
+
+        /* Enhanced blockquotes */
+        .markdown-content blockquote {
+            margin: 1rem 0;
+            padding: 1rem 1.25rem;
+            border-left: 4px solid var(--accent-color);
+            background: var(--accent-light);
+            border-radius: 0 8px 8px 0;
+            font-style: italic;
+        }
+        .dark .markdown-content blockquote {
+            background: rgba(74, 144, 226, 0.1);
+        }
+
+        /* Enhanced horizontal rules */
+        .markdown-content hr {
+            margin: 2rem 0;
+            border: none;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, var(--accent-color), transparent);
+        }
+
         .markdown-content pre {
             position: relative;
             background: linear-gradient(135deg, #2d3748, #1a202c);
@@ -296,9 +367,10 @@
             color: var(--accent-color);
         }
         .markdown-content ul, .markdown-content ol {
-            padding-left: 1.75rem;
+            padding-left: 0;
             margin-top: 0.75rem;
             margin-bottom: 0.75rem;
+            list-style: none;
         }
         .markdown-content li {
             margin-top: 0.25rem;
